CSS fixes for Expression widget
The first fix is more specificity, so that MathQuill default styles are
correctly overriden in webapp. The second fix concerns the error tooltip
in the answer area - using the default styles, it scrolls off up and to
the right! To avoid horizontal scrolling in the answer area we'll display
the tooltip to the left instead, and to avoid vertical scrolling we'll put
it directly on top of the Expression widget's MathQuill input.

Test Plan:
Confirmed expected apperance in both test.html and local webapp.

Auditors: jack

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -376,7 +376,7 @@
     }
 }
 
-.perseus-math-input {
+.perseus-math-input.mq-editable-field.mq-math-mode {
     // Mimic native text input
     background: #fff;
 
